@@ -1,0 +1,7 @@
+.. _null_potential:
+
+Constant (null) potential
+==========================
+
+.. autoclass:: galpy.potential.NullPotential
+   :members: __init__
